# promptml-cli

./: README.md  character.pml  pyproject.toml  requirements.txt
src/promptml_cli/: __about__.py  client.py  generation.py  main.py
